# wgpu-native-demo

./: .gitignore  CMakeLists.txt  README.md  build_web.sh
src/: common.cpp  common.h  main.cpp
src/native/: main.cpp
src/web/: main.cpp
